# ddkast

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  MODEL_CARD.md  MODEL_CARD_load_mw.md  QUESTIONS.md  README.md  config.toml  pyproject.toml
.claude/: settings.json
.claude/hooks/: ruff_fix.py
.claude/skills/coding-standards/: SKILL.md
.github/workflows/: ci.yml  competition-replay.yml  daily-forecast.yml
.run/: all tests.run.xml  download.run.xml  evaluate.run.xml  format-submission.run.xml  merge.run.xml  pipeline (all stages).run.xml  predict.run.xml  seed synthetic data.run.xml  train.run.xml  visualise.run.xml
docs/: presentation.html
scripts/: audit_determinism.py  run_pipeline.py  seed_synthetic.py  smoke_test.sh
src/ddkast/: __main__.py  audit.py  cli.py  config.py  folds.py
src/ddkast/data/: fetch.py  incremental.py  source.py  store.py  weather.py
src/ddkast/evaluation/: metrics.py
src/ddkast/models/: baseline.py  forecaster.py
src/ddkast/pipeline/: download.py  evaluate.py  format_submission.py  merge.py  predict.py  replay_competition.py  report.py  submit.py  train.py  visualise.py
tests/: conftest.py  synthetic.py  test_audit.py  test_baseline.py  test_clean.py  test_config.py  test_download.py  test_evaluate.py  test_features.py  test_folds.py  test_forecaster.py  test_format_submission.py  test_incremental.py  test_merge.py  test_metrics.py  test_pipeline_e2e.py  test_predict_live.py  test_replay_competition.py  test_source.py  test_submit.py  test_weather.py
tests/fixtures/: generate.py
(+5 files in other folders)
